--- a/Task1/OSC1.html
+++ b/Task1/OSC1.html
@@ -137,11 +137,9 @@
 <br />
 <a href="../Task2/Html2.html">Book</a>
 <br />
-<a href="../Task3/TPZN.html">How to make a song</a>
-<br />
 <a href="../Task4/t4.html">Entrance Examination</a>
 <br />
-<a href="../index.html">My pet (latest)</a>
+<a href="../index.html">My pet</a>
 </p>
 	
 	
