--- a/Task2/Html2.html
+++ b/Task2/Html2.html
@@ -84,11 +84,9 @@
 <br />
 <a href="../Task1/OSC1.html">Osijek Softwere City</a>
 <br />
-<a href="../Task3/TPZN.html">Book</a>
-<br />
 <a href="../Task4/t4.html">Entrance Examination</a>
 <br />
-<a href="../index.html">My pet (latest)</a>
+<a href="../index.html">My pet</a>
 </p>
 <footer>
 
